<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appcompat_extensionid">com.distriqt.AppCompat</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="dbx_install_main">Please Install the Dropbox App</string>
    <string name="dbx_install_sub">With Dropbox installed, you can access all your stuff in your favorite apps, like this one!</string>
    <string name="dbx_install">Install Dropbox</string>
    <string name="dbx_install_button_ok">Install</string>
    <string name="dbx_install_button_cancel">Cancel</string>
    <string name="dbx_update_main">Please Update the Dropbox App</string>
    <string name="dbx_update_sub">With the new Dropbox app, you can access all your stuff in your favorite apps, like this one!</string>
    <string name="dbx_update">Update Dropbox</string>
    <string name="dbx_update_button_ok">Update</string>
    <string name="app_name">BearTrax</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="playservices_base_extensionid">com.distriqt.playservices.Base</string>
    <string name="pw_attachment_transition_id">attachment</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="core_extensionid">com.distriqt.Core</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="files">Files</string>
    <string name="directories">Folders</string>
    <string name="goUp">Go Up</string>
    <string name="all">Check All</string>
    <string name="cancel">Cancel</string>
    <string name="none">Uncheck All</string>
    <string name="ext">External</string>
    <string name="Int">Internal</string>
    <string name="New">New Folder</string>
    <string name="CNew">Enter New Folder Name</string>
    <string name="create">Create</string>
    <string name="title">Select File</string>
    <string name="back"></string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="scanner_extensionid">com.distriqt.Scanner</string>
    <string name="recyclerview_extensionid">com.distriqt.RecyclerView</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="material_extensionid">com.distriqt.Material</string>
    <string name="application_name">Adobe AIR</string>
    <string name="flash_browser_plugin">Flash Plugin</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_continue">Continue</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="IDA_APP_WAITING_DEBUGGER_TITLE"><u>Adobe AIR: Waiting for Connection</u></string>
    <string name="IDA_APP_UNABLE_LISTEN_ERROR"><u>Adobe AIR: Listening for Port</u></string>
    <string name="IDA_APP_WAITING_DEBUGGER_WARNING"><u>The AIR application is waiting for the debugger to make a connection. This may take up to %d seconds.</u></string>
    <string name="IDA_APP_DEBUGGER_TIMEOUT_INFO">Unable to connect to the debugger.</string>
    <string name="app_version">APP_VERSION</string>
    <string name="button_install">Continue</string>
    <string name="button_exit">Exit</string>
    <string name="file_save_as">Save As:</string>
    <string name="file_download">Download</string>
    <string name="file_upload">Upload</string>
    <string name="audio_files">Audio Files</string>
    <string name="image_files">Image Files</string>
    <string name="video_files">Video Files</string>
    <string name="button_ok">OK</string>
    <string name="empty_file_list">No files were found.</string>
    <string name="title_adobe_air"><b>Adobe AIR</b></string>
    <string name="text_runtime_required">"This application requires Adobe AIR.

"</string>
    <string name="text_install_runtime">To continue, install Adobe AIR on this device.</string>
    <string name="text_runtime_on_external_storage">To continue, either install Adobe AIR on this device or exit this application and mount the SD card containing Adobe AIR before re-launching.</string>
    <string name="text_gamepreview_loading">Loading...</string>
    <string name="text_gamepreview_loading_error">Could not load the Game.</string>
    <string name="text_install_gamepreview_app">Install Now</string>
    <string name="text_air_missing_header">Adobe AIR required</string>
    <string name="text_air_missing_text">You need to install Adobe AIR for the game preview to work.</string>
    <string name="button_install_air_from_playstore">Install from Play Store.</string>
    <string name="text_dont_show_again">"Don't show this again."</string>
    <string name="IDA_CURL_SSL_SECURITY_WARNING">Security Warning</string>
    <string name="IDA_CURL_INTERFACE_THISSESS">Trust for Session</string>
    <string name="IDA_CURL_INTERFACE_NOSESS">Cancel</string>
    <string name="IDA_CURL_INTERFACE_OK">Ok</string>
    <string name="IDA_CURL_INTERFACE_UNVERSER_2">The server that the application is connecting to is unverified.</string>
    <string name="IDA_CURL_INTERFACE_ALLSESS">Trust Always</string>
    <string name="IDA_CURL_INTERFACE_SERVER"><b>Server:</b></string>
    <string name="IDA_CURL_INTERFACE_TRUSTSER">Trust this server and make the connection?</string>
    <string name="IDA_CURL_INTERFACE_CNAME_MSG">The name of the server (%1$s) does not match the name on the certificate (%2$s). Trust this server and continue?</string>
    <string name="IDA_CURL_INTERFACE_VIEW_CERT"><u>View Certificate</u></string>
    <string name="IDA_CURL_INTERFACE_CERTIFICATE_DETAILS_TITLE"><u>Certificate Details</u></string>
    <string name="IDA_CERTIFICATE_DETAILS"><b>Certificate:</b>"
 
 "<u><b>Issued To:</b></u>"
 Common Name:
 %1$s
 
 Organization:
 %2$s
 
 Organizational Unit:
 %3$s
 
 "<u><b>Issued by:</b></u>"
 Common Name:
 %4$s
 
 Organization:
 %5$s
 
 Organizational Unit:
 %6$s
 
 "<u><b>Validity:</b></u>"
 Issued On:
 %7$s
 
 Expires On:
 %8$s "</string>
</resources>
