<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/fileSelectionContainer" android:background="@android:color/background_light" android:layout_width="fill_parent" android:layout_height="fill_parent" android:maxWidth="300.0dip" android:maxHeight="500.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/titlebarLayout" android:background="#ff007dc3" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <Button android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/backButton" android:background="@android:color/transparent" android:paddingLeft="15.0dip" android:paddingTop="5.0dip" android:paddingRight="15.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/back" android:layout_centerVertical="true" />
        <TextView android:textSize="15.0sp" android:textColor="#ffffffff" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title" android:layout_centerInParent="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:weightSum="60.0">
        <Button android:id="@id/storage" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/ext" android:layout_weight="30.0" />
    </LinearLayout>
    <TextView android:textSize="15.0sp" android:textColor="@android:color/primary_text_light" android:gravity="center_horizontal" android:id="@id/folderpath" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <View android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <ListView android:id="@id/directorySelectionList" android:layout_width="fill_parent" android:layout_height="wrap_content" android:choiceMode="multipleChoice" android:layout_weight="1.0" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="60.0">
        <Button android:id="@id/cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="30.0" />
        <Button android:id="@id/ok" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ok" android:layout_weight="30.0" />
    </LinearLayout>
</LinearLayout>